<resources>
    //SISTEMA
    <string name="app_name">Scan Cam</string>

    //ShorCut
    <string name="cam">Escanear</string>

    //Estandar
    <string name="NoScan">No se ha escaneado ningún código</string>
    <string name="NoScan_1">No se ha escaneado ningún enlace</string>
    <string name="Scan">Escanear</string>
    <string name="mb">Atras</string>
    <string name="Terminos">Términos y Condiciones</string>
    <string name="Politica">Pólitica de Privacidad</string>
    <string name="compartir">Share</string>
    <string name="ScanQR">ESCANEAR CÓDIGO QR</string>
    <string name="ScanBarcode">ESCANEAR CÓDIGO DE BARRAS</string>
    <string name="exitScan">Cancelaste el escaneo</string>
    <string name="CopyScan">Texto copiado al portapapeles</string>
    <string name="linkPoliticas">https://estuardo.dev/legal/politicas-de-privacidad/</string>
    <string name="linkTerminos">https://estuardo.dev/legal/terminos-y-condiciones/</string>
    <string name="Escaneo_Complete">Escaneo Completado</string>
    <string name="copy">Copiar</string>
    <string name="NNN"></string>
    <string name="secure">El enlace parece ser Seguro</string>
    <string name="nosecure">El enlace parece ser inseguro</string>
    <string name="frag_qr">Escanea Códigos</string>
    <string name="frag_bar">Código de Barra</string>
    <string name="frag_o">Otros Códigos</string>
    <string name="info">¿Qué significa esto?</string>
    <string name="terminos"><a href="https://estuardo.dev/legal/terminos-y-condiciones/">Términos y Condiciones de Scan Cam</a></string>
    <string name="mala">En caso contrario y el icono mostrado sea este probablemente el sitio web sea inseguro de varias manera como por ejemplo, virus, malware, datos del usuario expuestos, cookies mal intencionadas, etc.</string>
    <string name="sc">Scan Cam, no se hace responsable de los enlaces que usted como usuario visita. Todo enlace que abra fuera de la app es bajo su responsabilidad. Puedes leer mas en: </string>
    <string name="bien">En dado caso que el icono sea este, se refiere a que posiblemente el sitio sea seguro. Mas no se confirma, debido que puede estar enlazado a un acortador de enlaces como bien lo puede ser bitly</string>
    <string name="que">¿Qué significa esto?</string>

    //Share
    <string name="msg">Hey,descarga esta increíble aplicación.\n¡Descargala y dale 5 estrellas!\n</string>
    <string name="appurl">https://play.google.com/store/apps/details?id=com.stuarddevapps.scancam</string>

    //ADS
    <string name="intersictial_qr">ca-app-pub-6691938542138083/3493162843</string>
    <string name="intersictial_bar">ca-app-pub-6691938542138083/8458549062</string>
    <string name="intersictial_scan">ca-app-pub-6691938542138083/8216073078</string>
    <string name="intersictial_logs">ca-app-pub-6691938542138083/4303013994</string>


    //Menu
    <string name="qr">Escanea Códigos</string>
    <string name="barcode">Códigos de Barra</string>
    <string name="history">Historial</string>

    // Menu History
    <string name="clear">Vaciar</string>

</resources>