<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="116dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/ic_verify" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="115dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/ic_negative" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Qué significa esto?"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan Cam"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="300dp"
        android:text="@string/bien"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="160dp"
        android:layout_height="300dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="180dp"
        android:text="@string/mala" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:text="@string/sc" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="460dp"
        android:autoLink="web"
        android:text="@string/terminos"
        android:textSize="14dp"
        android:textStyle="bold" />

</RelativeLayout>