<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Escaneo"
    android:background="@color/other_2"
    android:id="@+id/mys">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:text="@string/Escaneo_Complete"
        android:textColor="@color/normal_1"
        android:textSize="35dp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/link4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autoLink="web"
        android:text="@string/NoScan_1"
        android:textColor="@color/normal_1"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="349dp" />

    <TextView
        android:id="@+id/txtSecure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/NNN"
        android:textColor="@color/normal_1"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/btncopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/copy"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/black"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        app:adSize="FULL_BANNER"
        app:adUnitId="ca-app-pub-6691938542138083/9050175071"
        tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView>

</RelativeLayout>